fixed facebook bg color on mobile

--- a/themes/lecture-cfo/scss/_theme.scss
+++ b/themes/lecture-cfo/scss/_theme.scss
@@ -284,4 +284,7 @@ ul.lecture-details {
     .fb-like-box{
         border-top: 1px solid #e4e4e4;
     }
+    .facebook-container{
+        background-color: #e4e4e4;
+    }
 }
